--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head><title>正在跳转</title></head>
 <body>
-<script language='javascript'>document.location = 'http://zhiot.iok.la:50124/'</script>
+<script language='javascript'>document.location = 'https://zhiot.gitee.io/html/'</script>
 </body>
 </html>
